Closed
Bug 77604
Opened 25 years ago
Closed 25 years ago
Assert due to aProperty of kNC_NameSort in GetTarget() in History
Categories
(Core Graveyard :: History: Global, defect, P2)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9.1
People
(Reporter: jesup, Assigned: alecf)
References
Details
(Whiteboard: fix in hand)
Attachments
(2 files)
|
15.29 KB,
text/plain
|
Details | |
|
646 bytes,
patch
|
Details | Diff | Splinter Review |
FreeBSD 4.1 Mozilla 20010417xx
Assertion in nsGlobalHistory.cpp:1521 --
"huh, how'd I get here?"
I was looking at history entries (Tools -> History) and tried to expand one
(having expanded another one right before) by clicking on the arrow on the left.
GetTarget() was called with aProperty of kNC_NameSort. To hit the Assertion,
"isFindResource(aSource)" must have returned 0.
See attached GDB backtrace.
| Reporter | ||
Comment 1•25 years ago
|
||
| Assignee | ||
Comment 3•25 years ago
|
||
| Assignee | ||
Comment 4•25 years ago
|
||
I was forgetting to handle the NameSort property as simply the Name - the
NameSort property is special for find: uris and is handled in code above this
patch, but not for normal entries.
Status: NEW → ASSIGNED
Keywords: patch
Priority: -- → P2
Whiteboard: fix in hand
Target Milestone: --- → mozilla0.9.1
| Assignee | ||
Updated•25 years ago
|
Summary: Alert due to aProperty of kNC_NameSort in GetTarget() in History → Assert due to aProperty of kNC_NameSort in GetTarget() in History
Comment 5•25 years ago
|
||
sr=sspitzer
| Assignee | ||
Comment 6•25 years ago
|
||
fix is in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•