fix for bug 77604 and bug 78243, r=hewitt, sr=sspitzer - load the history db when the url bar kicks off an autocomplete, and make sure that we answer to the sorted name property for non-find URLs